basic styling and arranging, embedding pages with iframe, button placement

--- a/container.html
+++ b/container.html
@@ -11,14 +11,8 @@
 
 <body>
     <div class="mainContent">
-        <div class="imageWindow">
-
-        </div>
-        <div class="typewriter">
-            <p1>
-                buh
-            </p1>
-
+        <div class="gameWindow">
+            <iframe id="imageIFrame" src="Story Pages/startPage.html"   frameborder="0"></iframe>
         </div>
     </div>
 
