implemented saving the path the player takes and displaying it at the end

--- a/container.html
+++ b/container.html
@@ -12,7 +12,7 @@
 <body>
     <div class="mainContent">
         <div class="gameWindow">
-            <iframe id="imageIFrame" src="Story Pages/page1.html"   frameborder="0"></iframe>
+            <iframe id="imageIFrame" src="storyPages/page1.html"   frameborder="0"></iframe>
         </div>
     </div>
 
