--- a/storyPages/endA.html
+++ b/storyPages/endA.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="gameWindowStyle.css" type="text/css">
-
+    <script defer type="text/javascript" src='gamestate.js'> </script>
 </head>
 
 <body>
@@ -15,23 +15,23 @@
 
         </div>
         <div class="typewriter">
-            <p1>
-                3A
-            </p1>
+            <p id="p1">
+                endA
+            </p>
 
         </div>
-        <a class="button" id="button1" href="page4A.html">
-            A
+        <a class="button" id="button1" href="page1.html">
+            To Start
         </a>
-        <a class="button" id="button2" href="page4B.html">
-            B
+        <a class="button" id="button2" href="page1.html">
+
         </a>
-        <a class="button" id="button3" href="page4C.html">
-            C
+        <a class="button" id="button3" href="page1.html">
+
         </a>
-        <a class="button" id="button4" href="page4D.html">
+        <a class="button" id="button4" href="page1.html">
         </a>
-            D
+
     </div>
     </div>
 </body>
