--- a/storyPages/endD.html
+++ b/storyPages/endD.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="gameWindowStyle.css" type="text/css">
-
+    <script defer type="text/javascript" src='gamestate.js'> </script>
 </head>
 
 <body>
@@ -15,22 +15,21 @@
 
         </div>
         <div class="typewriter">
-            <p1>
-                4D
-            </p1>
+            <p id="p1">
+                endD
+            </p>
 
         </div>
-        <a class="button" id="button1" href="end.html">
-            A
+        <a class="button" id="button1" href="page1.html">
+            To Start
         </a>
-        <a class="button" id="button2" href="end.html">
-            B
+        <a class="button" id="button2" href="page1.html">
+
         </a>
-        <a class="button" id="button3" href="end.html">
-            C
+        <a class="button" id="button3" href="page1.html">
+
         </a>
-        <a class="button" id="button4" href="end.html">
-            D
+        <a class="button" id="button4" href="page1.html">
         </a>
 
     </div>
