--- a/storyPages/page1.html
+++ b/storyPages/page1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="gameWindowStyle.css" type="text/css">
-    
+    <script defer type="text/javascript" src='gamestate.js'> </script>
 </head>
 <body >
     <div class="mainContent">
@@ -13,9 +13,9 @@
             
         </div>
         <div class="typewriter">
-            <p1>
+            <p id="p1">
                Pick One
-            </p1>
+            </p>
 
         </div>
         <a class="button" id="button1" href="page2A.html">A</a>
