--- a/storyPages/page2A.html
+++ b/storyPages/page2A.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="gameWindowStyle.css" type="text/css">
-    
+    <script defer type="text/javascript" src='gamestate.js'> </script>
 </head>
-<body >
+
+<body>
     <div class="mainContent">
         <div class="gameWindow">
-            
+
         </div>
         <div class="typewriter">
-            <p1>
-                2B
-            </p1>
+            <p id="p1">
+                2A
+            </p>
 
         </div>
         <a class="button" id="button1" href="page3A.html">
@@ -30,7 +32,9 @@
         <a class="button" id="button4" href="page3D.html">
             D
         </a>
-        </div>
+
+    </div>
     </div>
 </body>
+
 </html>
