--- a/storyPages/page2C.html
+++ b/storyPages/page2C.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="gameWindowStyle.css" type="text/css">
-    
+    <script defer type="text/javascript" src='gamestate.js'> </script>
 </head>
 <body >
     <div class="mainContent">
@@ -13,12 +13,12 @@
             
         </div>
         <div class="typewriter">
-            <p1>
-                2D
-            </p1>
+            <p id="p1">
+                2C
+            </p>
 
         </div>
-   <a class="button" id="button1" href="page3A.html">
+        <a class="button" id="button1" href="page3A.html">
             A
         </a>
         <a class="button" id="button2" href="page3B.html">
