--- a/storyPages/page2D.html
+++ b/storyPages/page2D.html
@@ -1,40 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="gameWindowStyle.css" type="text/css">
-
+    <script defer type="text/javascript" src='gamestate.js'> </script>
 </head>
-
-<body>
+<body >
     <div class="mainContent">
         <div class="gameWindow">
-
+            
         </div>
         <div class="typewriter">
-            <p1>
-                4C
-            </p1>
+            <p id="p1">
+                2D
+            </p>
 
         </div>
-        <a class="button" id="button1" href="end.html">
+   <a class="button" id="button1" href="page3A.html">
             A
         </a>
-        <a class="button" id="button2" href="end.html">
+        <a class="button" id="button2" href="page3B.html">
             B
         </a>
-        <a class="button" id="button3" href="end.html">
+        <a class="button" id="button3" href="page3C.html">
             C
         </a>
-        <a class="button" id="button4" href="end.html">
+        <a class="button" id="button4" href="page3D.html">
             D
         </a>
-
-    </div>
+        </div>
     </div>
 </body>
-
 </html>
