--- a/storyPages/page3D.html
+++ b/storyPages/page3D.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="gameWindowStyle.css" type="text/css">
-
+    <script defer type="text/javascript" src='gamestate.js'> </script>
 </head>
 
 <body>
@@ -15,23 +15,24 @@
 
         </div>
         <div class="typewriter">
-            <p1>
-                2A
-            </p1>
+            <p id="p1">
+                3D
+            </p>
 
         </div>
-        <a class="button" id="button1" href="page3A.html">
+           <a class="button" id="button1" href="page4A.html">
             A
         </a>
-        <a class="button" id="button2" href="page3B.html">
+        <a class="button" id="button2" href="page4B.html">
             B
         </a>
-        <a class="button" id="button3" href="page3C.html">
+        <a class="button" id="button3" href="page4C.html">
             C
         </a>
-        <a class="button" id="button4" href="page3D.html">
+        <a class="button" id="button4" href="page4D.html">
             D
         </a>
+            
 
     </div>
     </div>
