--- a/storyPages/page4A.html
+++ b/storyPages/page4A.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="gameWindowStyle.css" type="text/css">
-
+    <script defer type="text/javascript" src='gamestate.js'> </script>
 </head>
 
 <body>
@@ -15,23 +15,24 @@
 
         </div>
         <div class="typewriter">
-            <p1>
-                3B
-            </p1>
+            <p id="p1">
+                4A
+            </p>
 
         </div>
-          <a class="button" id="button1" href="page4A.html">
+        <a class="button" id="button1" href="endA.html">
             A
         </a>
-        <a class="button" id="button2" href="page4B.html">
+        <a class="button" id="button2" href="endB.html">
             B
         </a>
-        <a class="button" id="button3" href="page4C.html">
+        <a class="button" id="button3" href="endC.html">
             C
         </a>
-        <a class="button" id="button4" href="page4D.html">
-        </a>
+        <a class="button" id="button4" href="endD.html">
             D
+        </a>
+
     </div>
     </div>
 </body>
