--- a/storyPages/page4D.html
+++ b/storyPages/page4D.html
@@ -1,36 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="gameWindowStyle.css" type="text/css">
-    
+    <script defer type="text/javascript" src='gamestate.js'> </script>
 </head>
-<body >
+
+<body>
     <div class="mainContent">
         <div class="gameWindow">
-            
-        </div>
-        <div class="typewriter">
-            <p1>
-                2C
-            </p1>
 
         </div>
-        <a class="button" id="button1" href="page3A.html">
+        <div class="typewriter">
+            <p id="p1">
+                4D
+            </p>
+
+        </div>
+        <a class="button" id="button1" href="endA.html">
             A
         </a>
-        <a class="button" id="button2" href="page3B.html">
+        <a class="button" id="button2" href="endB.html">
             B
         </a>
-        <a class="button" id="button3" href="page3C.html">
+        <a class="button" id="button3" href="endC.html">
             C
         </a>
-        <a class="button" id="button4" href="page3D.html">
+        <a class="button" id="button4" href="endD.html">
             D
         </a>
-        </div>
+    </div>
     </div>
 </body>
+
 </html>
