--- a/storyPages/page3A.html
+++ b/storyPages/page3A.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="gameWindowStyle.css" type="text/css">
-    <script type="text/javascript" src='typewriter.js'> </script>
-
+    <script defer type="text/javascript" src='gamestate.js'> </script>
 </head>
 
 <body>
@@ -16,23 +15,23 @@
 
         </div>
         <div class="typewriter">
-            <p1>
-                END
-            </p1>
+            <p id="p1">
+                3A
+            </p>
 
         </div>
-        <a class="button" id="button1" href="page1.html">
-            To Start
+        <a class="button" id="button1" href="page4A.html">
+            A
         </a>
-        <a class="button" id="button2" href="page1.html">
-
+        <a class="button" id="button2" href="page4B.html">
+            B
         </a>
-        <a class="button" id="button3" href="page1.html">
-
+        <a class="button" id="button3" href="page4C.html">
+            C
         </a>
-        <a class="button" id="button4" href="page1.html">
+        <a class="button" id="button4" href="page4D.html">
+            D
         </a>
-
     </div>
     </div>
 </body>
