--- a/storyPages/page3C.html
+++ b/storyPages/page3C.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="gameWindowStyle.css" type="text/css">
-
+    <script defer type="text/javascript" src='gamestate.js'> </script>
 </head>
 
 <body>
@@ -15,9 +15,9 @@
 
         </div>
         <div class="typewriter">
-            <p1>
+            <p id="p1">
                 3C
-            </p1>
+            </p>
 
         </div>
            <a class="button" id="button1" href="page4A.html">
@@ -30,8 +30,9 @@
             C
         </a>
         <a class="button" id="button4" href="page4D.html">
+             D
         </a>
-            D
+           
     </div>
     </div>
 </body>
